added resume section, uninstalled unused package

--- a/index.html
+++ b/index.html
@@ -72,7 +72,12 @@
           </li>
           <li>
             <a href="#projects" class="link"
-              ><i class="fas fa-laptop-code"></i> Projects</a
+              ><i class="fab fa-codepen"></i> Projects</a
+            >
+          </li>
+          <li>
+            <a href="#resume" class="link"
+              ><i class="fas fa-briefcase"></i> Resume</a
             >
           </li>
 
@@ -96,7 +101,7 @@
       <div class="hero">
         <h1 class="h1">Hi, I'm a <span class="animate"></span></h1>
         <p class="student">
-          Full-time undergraduate with passion for learning web development.
+          Full-time student with passion for web development.
         </p>
         <div class="hero-btns">
           <a href="#about" class="about" id="about-btn">About me</a>
@@ -231,7 +236,7 @@
           <p><i class="fas fa-book-reader"></i></p>
           <h3>Frameworks/Libraries</h3>
           <span
-            >React
+            >React.js
             <span
               class="iconify"
               data-icon="logos:react"
@@ -397,7 +402,7 @@
           <div class="card-img card2"></div>
           <div class="card-text">
             <h2>Memory Cards</h2>
-            <p>React memory card game with tf2 theme.</p>
+            <p>React memory card game with TF2 theme.</p>
             <br />
             <p class="made-with">
               Made with:
@@ -744,15 +749,14 @@
       </div>
     </section>
 
-    <footer id="contact">
-      <span>Email: </span
-      ><a
-        class="email"
-        href="mailto:sultanbadri@berkeley.edu"
-        aria-label="Email"
-        rel="noopener"
-        >sultanbadri@berkeley.edu</a
-      >
+    <footer id="resume">
+      <h2>
+        <i class="far fa-star"></i> <span>My</span> Resume
+        <i class="far fa-star"></i>
+      </h2>
+      <a class="resume" href="images/resume.pdf" target="_blank"
+        >Download <i class="fas fa-arrow-down"></i
+      ></a>
     </footer>
   </body>
 </html>
