fixed project links

--- a/index.html
+++ b/index.html
@@ -551,13 +551,13 @@
           </div>
           <div class="card-buttons">
             <a
-              href="https://sultanbadri.github.io/portfolio/"
+              href="https://sultanbadri.github.io/"
               target="_blank"
               class="demo"
               ><i class="far fa-eye"></i> Demo</a
             >
             <a
-              href="https://github.com/SultanBadri/portfolio"
+              href="https://github.com/SultanBadri/sultanbadri.github.io"
               target="_blank"
               class="code"
               ><i class="fas fa-code"></i> Code</a
