--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       <!-- HERO SECTION -->
       <div class="hero">
         <h1 class="h1">Hi, I'm a <span class="animate"></span></h1>
-        <p class="student">
+        <p class="student" id="student">
           Full-time student with passion for web development.
         </p>
         <div class="hero-btns">
@@ -320,7 +320,7 @@
         <div class="card" id="card">
           <div class="card-img card10"></div>
           <div class="card-text">
-            <h2>Mini Message Board</h2>
+            <h2>Message Board</h2>
             <p>Message board made with node and express.</p>
             <br />
             <p class="made-with">
