removed footer for now

--- a/index.html
+++ b/index.html
@@ -749,7 +749,7 @@
       </div>
     </section>
 
-    <footer id="resume">
+    <!-- <footer id="resume">
       <h2>
         <i class="far fa-star"></i> <span>My</span> Resume
         <i class="far fa-star"></i>
@@ -757,6 +757,6 @@
       <a class="resume" href="images/resume.pdf" target="_blank"
         >Download <i class="fas fa-arrow-down"></i
       ></a>
-    </footer>
+    </footer> -->
   </body>
 </html>
