added inventory-application under projects

--- a/index.html
+++ b/index.html
@@ -230,6 +230,10 @@
             ></span
           ></span>
           <br />
+          <span
+            >Java
+            <span class="iconify" data-icon="vscode-icons:file-type-java"></span
+          ></span>
         </div>
 
         <div class="learning">
@@ -318,10 +322,52 @@
 
       <div class="container reveal">
         <div class="card" id="card">
+          <div class="card-img card11"></div>
+          <div class="card-text">
+            <h2>Inventory App</h2>
+            <p>Node, Express, and MongoDB inventory application.</p>
+            <br />
+            <p class="made-with">
+              Made with:
+              <span
+                class="iconify"
+                data-icon="logos:nodejs-icon"
+                data-inline="false"
+              ></span>
+              <span
+                class="iconify"
+                data-icon="simple-icons:express"
+                data-inline="false"
+              ></span>
+              <span
+                class="iconify"
+                data-icon="vscode-icons:file-type-mongo"
+              ></span>
+            </p>
+            <br />
+            <p>September 2021</p>
+          </div>
+          <div class="card-buttons">
+            <a
+              href="https://fast-scrubland-70478.herokuapp.com/"
+              target="_blank"
+              class="demo"
+              ><i class="far fa-eye"></i> Demo</a
+            >
+            <a
+              href="https://github.com/SultanBadri/inventory-application"
+              target="_blank"
+              class="code"
+              ><i class="fas fa-code"></i> Code</a
+            >
+          </div>
+        </div>
+
+        <div class="card" id="card">
           <div class="card-img card10"></div>
           <div class="card-text">
             <h2>Message Board</h2>
-            <p>Message board made with node and express.</p>
+            <p>Message board made with Node.js and Express.</p>
             <br />
             <p class="made-with">
               Made with:
