added members-only project

--- a/index.html
+++ b/index.html
@@ -236,9 +236,9 @@
           ></span>
         </div>
 
-        <div class="learning">
+        <div class="frameworks">
           <p><i class="fas fa-book-reader"></i></p>
-          <h3>Frameworks/Libraries</h3>
+          <h3>Frameworks/Libraries/Databases</h3>
           <span
             >React.js
             <span
@@ -263,13 +263,12 @@
           ></span>
           <br />
           <span
-            >jQuery
+            >MongoDB
             <span
               class="iconify"
-              data-icon="bx:bxl-jquery"
-              data-inline="false"
-            ></span>
-          </span>
+              data-icon="vscode-icons:file-type-mongo"
+            ></span
+          ></span>
           <br />
           <span
             >Jest
@@ -279,6 +278,23 @@
               data-inline="false"
             ></span
           ></span>
+          <br />
+          <span
+            >jQuery
+            <span
+              class="iconify"
+              data-icon="bx:bxl-jquery"
+              data-inline="false"
+            ></span>
+          </span>
+          <br />
+          <span
+            >Tailwind
+            <span
+              class="iconify"
+              data-icon="vscode-icons:file-type-tailwind"
+            ></span>
+          </span>
         </div>
 
         <div class="technologies">
@@ -321,6 +337,46 @@
       </div>
 
       <div class="container reveal">
+        <div class="card" id="card">
+          <div class="card-img card12"></div>
+          <div class="card-text">
+            <h2>Members Only</h2>
+            <p>Node, Express, MongoDB, and Passport.JS auth application.</p>
+            <br />
+            <p class="made-with">
+              Made with:
+              <span
+                class="iconify"
+                data-icon="logos:nodejs-icon"
+                data-inline="false"
+              ></span>
+              <span
+                class="iconify"
+                data-icon="simple-icons:express"
+                data-inline="false"
+              ></span>
+              <span
+                class="iconify"
+                data-icon="vscode-icons:file-type-mongo"
+              ></span>
+              <span class="iconify" data-icon="logos:passport"></span>
+            </p>
+            <br />
+            <p>December 2021</p>
+          </div>
+          <div class="card-buttons">
+            <a href="" target="_blank" class="demo"
+              ><i class="far fa-eye"></i> Demo</a
+            >
+            <a
+              href="https://github.com/SultanBadri/members-only"
+              target="_blank"
+              class="code"
+              ><i class="fas fa-code"></i> Code</a
+            >
+          </div>
+        </div>
+
         <div class="card" id="card">
           <div class="card-img card11"></div>
           <div class="card-text">
