--- a/index.html
+++ b/index.html
@@ -365,7 +365,10 @@
             <p>December 2021</p>
           </div>
           <div class="card-buttons">
-            <a href="" target="_blank" class="demo"
+            <a
+              href="https://murmuring-ridge-77823.herokuapp.com/"
+              target="_blank"
+              class="demo"
               ><i class="far fa-eye"></i> Demo</a
             >
             <a
@@ -405,7 +408,7 @@
           </div>
           <div class="card-buttons">
             <a
-              href="https://fast-scrubland-70478.herokuapp.com/"
+              href="https://whispering-island-03847.herokuapp.com/"
               target="_blank"
               class="demo"
               ><i class="far fa-eye"></i> Demo</a
