updated about me

--- a/index.html
+++ b/index.html
@@ -156,11 +156,11 @@
           <p>
             I'm currently an undergraduate looking to improve my knowledge in
             software and web development. I attend UC Berkeley and will major in
-            computer science. My programming journey kickstarted when learning
-            to make a simple HTML website on Microsoft's notepad program. The
-            Odin Project's Full Stack JavaScript Curriculum is just one of the
-            ways I'm learning to code now. Outside of coding, I like to play
-            board and video games, watch MMA, and continue to learn Spanish.
+            data science. My programming journey kickstarted when learning to
+            make a simple HTML website on Microsoft's notepad program. The Odin
+            Project's Full Stack JavaScript Curriculum is just one of the ways
+            I'm learning to code now. Outside of coding, I like to play board
+            and video games, watch MMA, and continue to learn Spanish.
           </p>
         </div>
         <div class="student-img">
