made some small changes

--- a/index.html
+++ b/index.html
@@ -154,13 +154,13 @@
         <div class="about-me" id="about-me">
           <h2><span>About</span> Me</h2>
           <p>
-            I'm currently an undergraduate looking to improve my knowledge in
-            software and web development. I attend UC Berkeley and will major in
-            data science. My programming journey kickstarted when learning to
-            make a simple HTML website on Microsoft's notepad program. The Odin
+            I'm currently an undergraduate looking to improve my software and
+            web development knowledge. I study at UC Berkeley, and I'm majoring
+            in data science. My programming journey kickstarted when learning to
+            make a simple HTML website on Window's notepad program. The Odin
             Project's Full Stack JavaScript Curriculum is just one of the ways
-            I'm learning to code now. Outside of coding, I like to play board
-            and video games, watch MMA, and continue to learn Spanish.
+            I'm learning to code now. Besides coding, I like to play board games
+            and video games, watch MMA, and learn Spanish.
           </p>
         </div>
         <div class="student-img">
@@ -185,29 +185,6 @@
           <p><i class="fas fa-code"></i></p>
           <h3>Languages</h3>
           <span
-            >HTML
-            <span
-              class="iconify"
-              data-icon="logos:html-5"
-              data-inline="false"
-            ></span
-          ></span>
-          <br />
-          <span
-            >CSS/SCSS
-            <span
-              class="iconify"
-              data-icon="logos:css-3"
-              data-inline="false"
-            ></span>
-            <span
-              class="iconify"
-              data-icon="logos:sass"
-              data-inline="false"
-            ></span
-          ></span>
-          <br />
-          <span
             >JS/TS
             <span
               class="iconify"
@@ -230,9 +207,29 @@
             ></span
           ></span>
           <br />
+          <span>Java <span class="iconify" data-icon="logos:java"></span></span>
+          <br />
           <span
-            >Java
-            <span class="iconify" data-icon="vscode-icons:file-type-java"></span
+            >HTML
+            <span
+              class="iconify"
+              data-icon="logos:html-5"
+              data-inline="false"
+            ></span
+          ></span>
+          <br />
+          <span
+            >CSS/SASS
+            <span
+              class="iconify"
+              data-icon="logos:css-3"
+              data-inline="false"
+            ></span>
+            <span
+              class="iconify"
+              data-icon="logos:sass"
+              data-inline="false"
+            ></span
           ></span>
         </div>
 
@@ -326,6 +323,8 @@
               data-inline="false"
             ></span
           ></span>
+          <br />
+          <span>Canva <span class="iconify" data-icon="cib:canva"></span></span>
         </div>
       </div>
     </section>
