updated skills section

--- a/index.html
+++ b/index.html
@@ -210,6 +210,11 @@
           <span>Java <span class="iconify" data-icon="logos:java"></span></span>
           <br />
           <span
+            >SQL
+            <span class="iconify" data-icon="vscode-icons:file-type-sql"></span
+          ></span>
+          <br />
+          <span
             >HTML
             <span
               class="iconify"
@@ -316,15 +321,26 @@
           ></span>
           <br />
           <span
-            >Figma
+            >Figma <span class="iconify" data-icon="logos:figma"></span
+          ></span>
+          <br />
+          <span
+            >Canva
             <span
               class="iconify"
-              data-icon="grommet-icons:figma"
-              data-inline="false"
+              data-icon="cib:canva"
+              style="color: #34cceb"
             ></span
           ></span>
           <br />
-          <span>Canva <span class="iconify" data-icon="cib:canva"></span></span>
+          <span
+            >Heroku
+            <span
+              class="iconify"
+              data-icon="bxl:heroku"
+              style="color: #ab34eb"
+            ></span
+          ></span>
         </div>
       </div>
     </section>
