added mern-blog and made some small changes

--- a/index.html
+++ b/index.html
@@ -353,6 +353,59 @@
 
       <div class="container reveal">
         <div class="card" id="card">
+          <div class="card-img card13"></div>
+          <div class="card-text">
+            <h2>MERN Blog</h2>
+            <p>MERN stack blog open to everyone.</p>
+            <br />
+            <p class="made-with">
+              Made with:
+              <span
+                class="iconify"
+                data-icon="logos-typescript-icon"
+                data-inline="false"
+              ></span>
+              <span
+                class="iconify"
+                data-icon="logos:react"
+                data-inline="false"
+              ></span>
+              <span
+                class="iconify"
+                data-icon="logos:nodejs-icon"
+                data-inline="false"
+              ></span>
+              <span
+                class="iconify"
+                data-icon="simple-icons:express"
+                data-inline="false"
+              ></span>
+              <span
+                class="iconify"
+                data-icon="vscode-icons:file-type-mongo"
+              ></span>
+              <span class="iconify" data-icon="logos:passport"></span>
+            </p>
+            <br />
+            <p>June 2022</p>
+          </div>
+          <div class="card-buttons">
+            <a
+              href="https://my-mern-blog1.herokuapp.com/"
+              target="_blank"
+              class="demo"
+              ><i class="far fa-eye"></i> Demo</a
+            >
+            <a
+              href="https://github.com/SultanBadri/MERN-blog/"
+              target="_blank"
+              class="code"
+              ><i class="fas fa-code"></i> Code</a
+            >
+          </div>
+        </div>
+
+        <div class="card" id="card">
           <div class="card-img card12"></div>
           <div class="card-text">
             <h2>Members Only</h2>
